--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <p>ここはインデックスページです。</p>
-    replaceURL:<a href="content/replace.html">replace.html</a>
+    replaceURL:<a href="content/replace.html">replaceURL.html</a>
   </body>
 </html>
