--- a/content/replaceURL.html
+++ b/content/replaceURL.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>URL置換</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <label for="url-input">移動先URL:</label>
