--- a/content/replaceURL.html
+++ b/content/replaceURL.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <label for="url-input">移動先URL:</label>
-    <input type="text" id="url-input" name="url-input">
+    <input type="text" id="url-input" name="url-input" value="https://">
     <button onclick="goToUrl()">移動する</button>
 
     <script>
