--- a/content/replaceURL.html
+++ b/content/replaceURL.html
@@ -8,6 +8,7 @@
     <label for="url-input">移動先URL:</label>
     <input type="text" id="url-input" name="url-input" value="https://">
     <button onclick="goToUrl()">移動する</button>
+    <a href="https://google.com"></a>
 
     <script>
       function goToUrl() {
