--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
 <body>
-    <a href="../hub/yosi1.html">・奇数なら3かけて1足す、偶数なら2で割る</a>
+    <a href="../other/hub/yosi1.html">・奇数なら3かけて1足す、偶数なら2で割る</a>
     <br>
-    <a href="../hub/seike1.html">・47*2^n+1</a>
+    <a href="../other/hub/seike1.html">・47*2^n+1</a>
 </body>
 </html>
